Usando Spring Data JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/algalog?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.show-sql=true
+# Nao se deve usar em ambiente em producao, somente para mostrar no log as consultas
+spring.jpa.show-sql=true 
